# jmm_trade

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  diagnose.py  docker-compose.yml  main.py  monitor_live.py  pyproject.toml  requirements.txt  test_dashboard.py  test_notification_flow.py  test_telegram.py  test_telegram_simple.py
.github/workflows/: ci.yml  deploy.yml  e2e.yml  release.yml
config/: candidates.json  config.yaml  targets.json
data/: test_pipeline.db
deploy/: README.md  polymarket-bot.service  setup_vps.sh
docs/: ARCHITECTURE.md  CICD.md  CONTRIBUTING.md  DEPLOYMENT_ASSESSMENT.md  TARGET_MANAGEMENT.md  TESTING.md  VPS_DEPLOYMENT.md
logs/: metrics.json
scripts/: alpha_rotation.py  check_shadow_results.py  discover_alpha.py
src/api/: client.py  price_feed.py  rate_limiter.py  websocket.py
src/cli/: commands.py
src/config/: loader.py  models.py
src/core/: alerts.py  app.py  enricher.py  monitor.py  portfolio.py  profiler.py  risk_manager.py  settlement.py  shadow.py  simulator.py  sizing.py
src/data/: database.py  export.py  models.py
src/notifications/: imessage.py  manager.py  rich_formatter.py  telegram.py  telegram_bot.py
src/utils/: app_with_dashboard.py  dashboard.py  dashboard_integration.py  latency.py  logger.py  metrics.py  target_manager.py
tests/: conftest.py  test_config.py  test_database.py  test_e2e_local.py  test_e2e_pipeline.py  test_monitor.py  test_rate_limiter.py  test_settlement.py  test_simulator.py
