[project]
name = "polymarket-copy-trader"
version = "0.2.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Pure logic tests, no I/O",
    "integration: Tests with DB or mocked API",
    "smoke: Tests against live Polymarket API",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
